API layer for Semantic Versioning
